# minecraft-genie

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  walkthrough.md
data/: embedder.py  lore.json  lore.txt  lore_docs.txt  web_scraping.py  web_scrapping.py
evaluation/: check_missing_content.py  gold_prompts.json  retriever_eval.py  retriever_eval_results.json  retriever_eval_summary.json
notebooks/: embedding.ipynb
storage/: docstore.json  index_store.json
