[project]
name = "minecraft-genie"
version = "0.1.0"
description = ""
authors = [{name= "yonahbole", email = "boleyonah@gmail.com"}]
readme = "README.md"

requires-python = ">=3.12,<3.13"
[tool.poetry.dependencies]
openai = "^1.98.0"
langchain = "^0.3.27"
tiktoken = "^0.9.0"
chromadb = "^1.0.15"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"
llama-index = "^0.13.0"
llama-index-core = "^0.13.0"
llama-index-embeddings-openai = "^0.5.0"
llama-index-vector-stores-chroma = "^0.5.0"
ruff = "^0.12.8"
